--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,5 +1,5 @@
 <div class="center jumbotron">
-  <h1>nenpyo.me</h1>
+  <h1>Welcome to the Sample App</h1>
 
   <h2>
     This is the home page for the
@@ -12,4 +12,3 @@
 
 <%= link_to image_tag("rails.png", alt: "Rails logo"),
             'http://rubyonrails.org/' %>
-
