--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -3,8 +3,17 @@
   <aside class="col-md-4">
     <section class="user_info">
       <h1>
+        <%#= gravatar_for @user %>
         <%= @user.name %>
       </h1>
     </section>
   </aside>
+  <div class="col-md-8">
+    <% if @user.rekishis.any? %>
+     <!-- <h3>Rekishis (<%= @user.rekishis.count %>)</h3>-->
+      <ol class="rekishis">
+        <%= render @rekishis %>
+      </ol>
+    <% end %>
+  </div>
 </div>
