スライドショーのスピード変更

--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -38,3 +38,5 @@
     <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
   </a>
 </div>
+
+<div id="carousel-example" class="carousel slide" data-ride="carousel" data-interval="3000">
