--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -11,7 +11,7 @@
   <!-- スライドの内容 -->
   <div class="carousel-inner">
     <div class="item active">
-      <img src="http://via.placeholder.com/1280x600" alt="">
+      <img src="https://raw.githubusercontent.com/wu-tang/sample_app/e2163ea8e4ec69c3cc9138ddf92a3d792947f1c5/nenpyologo.png" alt="">
     </div>
 
     <div class="item">
