トップのスライド追加

--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -9,11 +9,11 @@
   <!-- スライドの内容 -->
   <div class="carousel-inner">
     <div class="item active">
-      <img src="https://raw.githubusercontent.com/wu-tang/sample_app/e2163ea8e4ec69c3cc9138ddf92a3d792947f1c5/nenpyologo.png" alt="">
+      <img src="https://raw.githubusercontent.com/wu-tang/sample_app/e2163ea8e4ec69c3cc9138ddf92a3d792947f1c5/nenpyologo.png" alt="スライド1枚目">
     </div>
 
     <div class="item">
-      <img src="http://via.placeholder.com/1280x600" alt="">
+      <img src="https://github.com/wu-tang/sample_app/blob/aefe9dc5099bc6a7eca49539fe7685e8f10d7711/kizame_rekishi_logo.png?raw=true" alt="スライド2枚目">
     </div>
 
     <div class="item">
