--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -3,6 +3,11 @@
     <%= link_to "Nenpyo", root_path, id: "logo" %>
     <nav>
       <ul class="nav navbar-nav navbar-right">
+
+<style>
+body { background:#2A4453; }
+</style>
+
         <li><%= link_to "Rekishi", rekishi_path %></li>
         <li><%= link_to "Jidai", jidai_path %></li>
         <% if logged_in? %>
