--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -11,15 +11,15 @@ body { background:#2A4453; }
 
         <% if logged_in? %>
 
-        <li><%= link_to "Rekishi+", rekishi_path %></li>
-        <li><%= link_to "Jidai+", jidai_path %></li>
+        <li><%= link_to "レキシを追加", rekishi_path %></li>
+        <li><%= link_to "ジダイを追加", jidai_path %></li>
           <!--<li><%#= link_to "Users", '#' %></li>-->
          <!-- <li class="dropdown">
             <a href="#" class="dropdown-toggle" data-toggle="dropdown">
               Account <b class="caret"></b>
             </a>
             <ul class="dropdown-menu"> -->
-              <li><%= link_to "Profile", current_user %></li>
+              <li><%= link_to "ネンピョー", current_user %></li>
               <!-- <li><%#= link_to "Settings", '#' %></li> 
               <li class="divider"></li> -->
               <li>
