スライド3枚変更

--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,11 +1,16 @@
 <header class="navbar navbar-fixed-top navbar-inverse">
   <div class="container">
     <%= link_to "Nenpyo", root_path, id: "logo" %>
+
+    <style>
+    body { background:#FFFFFA; }
+    </style>
+
     <nav>
       <ul class="nav navbar-nav navbar-right">
 
 <style>
-body { background:#2A4453; }
+body { background:#FFFFFA; }
 </style>
 
         <li><%= link_to "Rekishi", rekishi_path %></li>
