--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -9,15 +9,15 @@
   <!-- スライドの内容 -->
   <div class="carousel-inner">
     <div class="item active">
-      <img src="https://raw.githubusercontent.com/wu-tang/sample_app/e2163ea8e4ec69c3cc9138ddf92a3d792947f1c5/nenpyologo.png" alt="スライド1枚目">
+      <img src="https://user-images.githubusercontent.com/31360339/29852807-28122d1e-8d77-11e7-8a9a-3ccf458e07cd.png" alt="スライド1枚目">
     </div>
 
     <div class="item">
-      <img src="https://github.com/wu-tang/sample_app/blob/aefe9dc5099bc6a7eca49539fe7685e8f10d7711/kizame_rekishi_logo.png?raw=true" alt="スライド2枚目">
+      <img src="https://user-images.githubusercontent.com/31360339/29853022-62c44fb8-8d78-11e7-82bc-e00822eec1bc.png" alt="スライド2枚目">
     </div>
 
     <div class="item">
-      <img src="http://via.placeholder.com/1280x600" alt="">
+      <img src="https://user-images.githubusercontent.com/31360339/29853016-5a29e872-8d78-11e7-966c-77dbcd7cbdd2.png" alt="">
     </div>
 
     <!--
