--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,6 +1,6 @@
 <header class="navbar navbar-fixed-top navbar-inverse">
   <div class="container">
-    <%= link_to "Nenpyo", root_path, id: "logo" %>
+    <%= link_to "Nenpyo", current_user, id: "logo" %>
     <nav>
       <ul class="nav navbar-nav navbar-right">
 
@@ -13,13 +13,12 @@ body { background:#2A4453; }
 
         <li><%= link_to "レキシを追加", rekishi_path %></li>
         <li><%= link_to "ジダイを追加", jidai_path %></li>
-          <!--<li><%#= link_to "Users", '#' %></li>-->
+        <li><%= link_to "Users", '#' %></li>
          <!-- <li class="dropdown">
             <a href="#" class="dropdown-toggle" data-toggle="dropdown">
               Account <b class="caret"></b>
             </a>
             <ul class="dropdown-menu"> -->
-              <li><%= link_to "ネンピョー", current_user %></li>
               <!-- <li><%#= link_to "Settings", '#' %></li> 
               <li class="divider"></li> -->
               <li>
